--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">100%</i></span>
+              <span class="skill">CSS</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -152,23 +152,23 @@
 
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">90%</i></span>
+              <span class="skill">PHP</span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">50%</i></span>
+              <span class="skill">JavaScript</span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">Java <i class="val">50%</i></span>
+              <span class="skill">Java</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -177,32 +177,32 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Laravel <i class="val">80%</i></span>
+              <span class="skill">Laravel</span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Bootstrap<i class="val">90%</i></span>
+              <span class="skill">Bootstrap</span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Android developer<i class="val">55%</i></span>
+              <span class="skill">Android developer</span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">Android developer<i class="val">55%</i></span>
+                <span class="skill">Android developer</span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
          
@@ -317,12 +317,12 @@
 
           <div class="col-lg-5 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/nostalgia.png" class="img-fluid" alt="">
+              <img src="assets/img/project2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Project Kedua</h4>
                 <p>Web  Aplication</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/nostalgia.png" data-gallery="portfolioGallery"
+                  <a href="assets/img/project2.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Aplication Protofolio Fotografer "><i class="bx bx-plus"></i></a>
                 </div>
               </div>
