--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <p>Web  Aplication</p>
                 <div class="portfolio-links">
                   <a href="assets/img/project2.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web Aplication Protofolio Fotografer "><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Web Aplication ERP Management "><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
